syntax = "proto3";
package main;
option go_package = "github.com/ThomasITU/MandatoryDisys01/course;course";


service CourseService{

    rpc GetCourses (GetCoursesRequest) returns (Message) {}

    rpc GetCourseById (GetCourseByIdRequest) returns (Message) {}

    rpc DeleteCourseById (DeleteCourseByIdRequest) returns(Message) {}
}
message Message{
    string name = 1;
}

message PostCourseRequest{
    string request = 1;
  }
  
  message DeleteCourseByIdRequest{
    string request = 1;
  }
  
  message GetCoursesRequest {
    string request = 1;
  }
  
  message GetCourseByIdRequest {
    string request = 1;
  }
  
 
  

//   message GetCoursesReply {
//     string message = 1;
//   }
//   message PostCourseReply{
//     string message = 1;
//   }
//   message DeleteCourseByIdReply{
//     string message = 1;
//   }
//   message GetCourseByIdReply {
//     string message = 1;
//   }